# spinas

./: ._Makefile  ._ncomplex.cpp  ._test.cpp  ._utilities.cpp  .gitignore  .gitignore~  CMakeLists.txt  Makefile  README  file_structure.txt
SM/: .#uuZh.cpp  AAWW.cpp  AAdd.cpp  AAee.cpp  AAuu.cpp  AWAW.cpp  AWWh.cpp  AWZW.cpp  AWud.cpp  AZWW.cpp  AZdd.cpp  AZee.cpp  AZuu.cpp  AdZd.cpp  AeZe.cpp  AhWW.cpp  AnWe.cpp  AuZu.cpp  WWWW.cpp  WWWW2.cpp  WdWd.cpp  WdZu.cpp  ZWWh.cpp  ZWZW.cpp  ZZWW.cpp  ZZZZ.cpp  ZhWW.cpp  ZnWe.cpp  dAAd.cpp  dAdh.cpp  dAgd.cpp  dWgu.cpp  dZZd.cpp  dZdh.cpp  ddAA.cpp  ddAh.cpp  ddWW.cpp  ddZZ.cpp  ddZh.cpp  dddd.cpp  (+109 more)
SM/CH/: main_22  main_22.c  make_main
SM/CH/models/: func1.mdl  lgrng1.mdl  lgrng1.mdl~  prtcls1.mdl  vars1.mdl
SM/include/: AAWW.h  AAdd.h  AAee.h  AAuu.h  AWAW.h  AWWh.h  AWZW.h  AWud.h  AZWW.h  AZdd.h  AZee.h  AZuu.h  AdZd.h  AeZe.h  AhWW.h  AnWe.h  AuZu.h  WWWW.h  WWWW2.h  WdWd.h  WdZu.h  ZWWh.h  ZWZW.h  ZZWW.h  ZZZZ.h  ZhWW.h  ZnWe.h  dAAd.h  dAdh.h  dAgd.h  dWgu.h  dZZd.h  dZdh.h  ddAA.h  ddAh.h  ddWW.h  ddZZ.h  ddZh.h  dddd.h  dddd2.h  (+107 more)
docs/: index.html  style.css
include/: cmatrix.h  cvector.h  particle.h  process.h  propagator.h  schain.h  spinas.h  sproduct.h  types.h  utilities.h
source/: cmatrix.cpp  cvector.cpp  particle.cpp  process.cpp  propagator.cpp  schain.cpp  sproduct.cpp  utilities.cpp
tests/: cmatrix.cpp  cvector.cpp  particle.cpp  propagator.cpp  schain.cpp  sproduct.cpp
user-dir/: eemm.cpp  test.cpp
user-dir/include/: eemm.h
